fix(#535): update endpoint and optimize place filtering logic
- Rename `processed-visits` endpoints to `visits`
- Replace `collect(Collectors.toList())` with `toList()` for filtering places